# docs/swagger.json
@@ -661,6 +661,56 @@
                 }
             }
         },
+        "/api/lookup": {
+            "post": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Dynamic"
+                ],
+                "summary": "GetLookUp Dynamic",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "OS Device",
+                        "name": "OS",
+                        "in": "header",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "OS Device",
+                        "name": "Version",
+                        "in": "header",
+                        "required": true
+                    },
+                    {
+                        "description": "req param #changes are possible to adjust the form of the registration form from frontend",
+                        "name": "req",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "type": "object",
+                            "$ref": "#/definitions/models.ParamLookup"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/models.ResponseModelList"
+                        }
+                    }
+                }
+            }
+        },
         "/api/menu": {
             "get": {
                 "security": [
@@ -1632,6 +1682,26 @@
                     "type": "string"
                 },
                 "sort_field": {
+                    "type": "string"
+                }
+            }
+        },
+        "models.ParamLookup": {
+            "type": "object",
+            "properties": {
+                "column_db": {
+                    "type": "string"
+                },
+                "init_search": {
+                    "type": "string"
+                },
+                "lookup_cd": {
+                    "type": "string"
+                },
+                "param_view": {
+                    "type": "string"
+                },
+                "search": {
                     "type": "string"
                 }
             }
